<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/dosis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/dosis"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/vaxi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/vaxi"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/aplikasi_prediksi_durasi_vaksinasi"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/vaxi"
        app:layout_constraintTop_toBottomOf="@+id/vaxi" />

    <TextView
        android:id="@+id/hintuser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/background"
        android:fontFamily="@font/poppins"
        android:paddingStart="16dp"
        android:paddingBottom="8dp"
        android:text="@string/hintuser"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupPeriode"
        app:layout_constraintEnd_toEndOf="@+id/sparkView"
        app:layout_constraintStart_toStartOf="@+id/radioGroupPeriode"
        tools:ignore="RtlSymmetry" />

    <RadioGroup
        android:id="@+id/radioGroupPilihan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deskripsi">

        <RadioButton
            android:id="@+id/vaksinasi1"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/vaksinasi_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/vaksinasi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/vaksinasi_2"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            android:textSize="12sp" />
    </RadioGroup>

    <com.robinhood.spark.SparkView
        android:id="@+id/sparkView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@color/background"
        app:layout_constraintBottom_toTopOf="@+id/hintuser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPilihan" />

    <RadioGroup
        android:id="@+id/radioGroupPeriode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/jumlahKasus"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/minggu"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/minggu"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/bulan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/bulan"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/maksimum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:text="@string/maksimum"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tanggalKasus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dosis"
        tools:text="Tanggal" />

    <com.robinhood.ticker.TickerView
        android:id="@+id/jumlahKasus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tanggalKasus"
        app:layout_constraintStart_toEndOf="@+id/tanggalKasus"
        app:layout_constraintTop_toTopOf="@+id/tanggalKasus"
        tools:text="20000" />

</androidx.constraintlayout.widget.ConstraintLayout>